some cleanup in html template fix invalid error JSON allow to shutdown server :)

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -4,19 +4,12 @@
    Author's custom styles
    ========================================================================== */
 
+footer ul {
+    display: inline;
+    list-style: none;
+    padding-left: 0px;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+footer li {
+    display: inline;
+}
