Added beginDate and endDate filters.

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -13,3 +13,8 @@ footer ul {
 footer li {
     display: inline;
 }
+
+input.ng-invalid:not([disabled]) {
+    background: red;
+    color: white;
+}
